--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,18 +6,18 @@
   flex-direction: column;
 }
 
-header {
-  flex-shrink: 0;
-  width: 100%;
-  height: 56px;
-  background-color: antiquewhite;
-}
-
-.scroll-element {
+.scrollElement {
   flex-basis: 400px;
   overflow-y: scroll;
 }
 
 .item {
   height: 100px;
+}
+
+.title {
+  flex-shrink: 0;
+  width: 100%;
+  height: 56px;
+  background-color: antiquewhite;
 }
